--- a/test-selection/index.html
+++ b/test-selection/index.html
@@ -630,7 +630,7 @@
                     <td>
                       <div class="ecl-help-block">Annex III</div>
                       <select id='select-annex-3' multiple size="1" ng-model="selectedOptionsAnnex3" ng-change="checkAnnexSelected()">
-                        <option value="1" disabled>Agricultural and aquaculture facilities (AF)</option>
+                        <option value="1">Agricultural and aquaculture facilities (AF)</option>
                         <option value="2">Area management / restriction / regulation zones & reporting units (AM)</option>
                         <option value="3">Bio-geographical regions (BR)</option>
                         <option value="4">Buildings (BU)</option>
@@ -2701,6 +2701,81 @@
                   </div>
                 </fieldset>
 
+                <!-- Agricultural and aquaculture facilities (AF) -->
+                <fieldset aria-describedby="checkbox-default-helper" class="ecl-form-group" ng-show="select.datasetType.includes('AF')">
+                  <legend class="ecl-form-label"><br/>Select the conformance classes to be assessed for ANNEX III - Agricultural and aquaculture facilities (AF)</legend>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-af-options-1"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexAFAdvanced('inspire_gml_encoding')"/><label class="ecl-checkbox__label" for="dataset-af-options-1"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'INSPIRE GML encoding' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data-encoding/master/inspire-gml">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-af-options-2"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexAFAdvanced('gml_application_schemas')"/><label class="ecl-checkbox__label" for="dataset-af-options-2"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'INSPIRE GML application schemas' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data/master/schemas">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-af-options-3"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexAFAdvanced('gml_application_schemas_agricultural')"/><label class="ecl-checkbox__label" for="dataset-af-options-3"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'GML application schemas, Agricultural and Aquaculture Facilities' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data-af/master/af-gml">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-af-options-4"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexAFAdvanced('application_schema_agricultural')"/><label class="ecl-checkbox__label" for="dataset-af-options-4"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'Application Schema, Agricultural and Aquaculture Facilities' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data-af/master/af-as">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-af-options-5"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexAFAdvanced('data_consistency')"/><label class="ecl-checkbox__label" for="dataset-af-options-5"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'Data consistency' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data/master/data-consistency">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-af-options-6"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexAFAdvanced('data_consistency_agricultural')"/><label class="ecl-checkbox__label" for="dataset-af-options-6"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'Data consistency, Agricultural and Aquaculture Facilities' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data-af/master/af-dc">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-af-options-7"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexAFAdvanced('information_accessibility')"/><label class="ecl-checkbox__label" for="dataset-af-options-7"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'Information accessibility' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data/master/information-accessibility">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-af-options-8"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexAFAdvanced('information_accessibility_agricultural')"/><label class="ecl-checkbox__label" for="dataset-af-options-8"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'Information accessibility, Agricultural and Aquaculture Facilities' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data-af/master/af-ia">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-af-options-9"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexAFAdvanced('reference_systems')"/><label class="ecl-checkbox__label" for="dataset-af-options-9"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'Reference systems' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data/master/reference-systems">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-af-options-10"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexAFAdvanced('reference_systems_agricultural')"/><label class="ecl-checkbox__label" for="dataset-af-options-10"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'Reference systems, Agricultural and Aquaculture Facilities' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data-af/master/af-rs">source</a>)</label>
+                  </div>
+                </fieldset>
+
                 <!-- Area management / restriction / regulation zones & reporting units (AM) -->
                 <fieldset aria-describedby="checkbox-default-helper" class="ecl-form-group" ng-show="select.datasetType.includes('AM')">
                   <legend class="ecl-form-label"><br/>Select the conformance classes to be assessed for ANNEX III - Area management / restriction / regulation zones & reporting units (AM)</legend>
@@ -4608,7 +4683,7 @@
     <footer class="ecl-footer-standardised">
   <div class="ecl-container ecl-footer-standardised__container">
     <section class="ecl-footer-standardised__section ecl-footer-standardised__section1"><a href=""
-        class="ecl-footer-standardised__title ecl-link ecl-link--standalone">INSPIRE Reference Validator</a> (v0.39b 2021-04-13 15:05)
+        class="ecl-footer-standardised__title ecl-link ecl-link--standalone">INSPIRE Reference Validator</a> (v0.41b 2021-05-26 10:30)
       <div class="ecl-footer-standardised__description">The INSPIRE Validator is managed by the European Commission Joint Research Centre B6 Unit</div>
     </section>
     <div class="ecl-footer-standardised__section2">
