Disabled SO and SU for production env

--- a/test-selection/index.html
+++ b/test-selection/index.html
@@ -646,9 +646,9 @@
                         <option value="13">Population distribution and demography (PD)</option>
                         <option value="14">Production and industrial facilities (PF)</option>
                         <option value="15">Sea regions (SR)</option>
-                        <option value="16">Soil (SO)</option>
+                        <option value="16" disabled>Soil (SO)</option>
                         <option value="17">Species distribution (SD)</option>
-                        <option value="18">Statistical units (SU)</option>
+                        <option value="18" disabled>Statistical units (SU)</option>
                         <option value="19">Utility and governmental services (US)</option>
                       </select>
                     </td>
