--- a/test-selection/index.html
+++ b/test-selection/index.html
@@ -631,7 +631,7 @@
                       <div class="ecl-help-block">Annex III</div>
                       <select id='select-annex-3' multiple size="1" ng-model="selectedOptionsAnnex3" ng-change="checkAnnexSelected()">
                         <option value="0">Agricultural and aquaculture facilities (AF)</option>
-                        <option value="1" disabled>Atmospheric conditions and Meteorological geographical features (AC-MF)</option>
+                        <option value="1">Atmospheric conditions and Meteorological geographical features (AC-MF)</option>
                         <option value="2">Area management / restriction / regulation zones & reporting units (AM)</option>
                         <option value="3">Bio-geographical regions (BR)</option>
                         <option value="4">Buildings (BU)</option>
@@ -2818,6 +2818,81 @@
                           class="ecl-checkbox__icon ecl-icon ecl-icon--s">
                           <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
                         </svg></span>Conformance Class 'Reference systems, Agricultural and Aquaculture Facilities' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data-af/master/af-rs">source</a>)</label>
+                  </div>
+                </fieldset>
+
+                <!-- Atmospheric conditions and Meteorological geographical features (AC-MF) -->
+                <fieldset aria-describedby="checkbox-default-helper" class="ecl-form-group" ng-show="select.datasetType.includes('ACMF')">
+                  <legend class="ecl-form-label"><br/>Select the conformance classes to be assessed for ANNEX III - Atmospheric conditions and Meteorological geographical features (AC-MF)</legend>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-acmf-options-1"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexACMFAdvanced('inspire_gml_encoding')"/><label class="ecl-checkbox__label" for="dataset-acmf-options-1"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'INSPIRE GML encoding' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data-encoding/master/inspire-gml">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-acmf-options-2"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexACMFAdvanced('gml_application_schemas')"/><label class="ecl-checkbox__label" for="dataset-acmf-options-2"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'INSPIRE GML application schemas' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data/master/schemas">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-acmf-options-3"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexACMFAdvanced('gml_application_schemas_atmospheric')"/><label class="ecl-checkbox__label" for="dataset-acmf-options-3"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'GML application schemas, Atmospheric Conditions and Meteorological Geographical Features' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data-ac-mf/master/ac-mf-gml">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-acmf-options-4"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexACMFAdvanced('application_schema_atmospheric')"/><label class="ecl-checkbox__label" for="dataset-acmf-options-4"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'Application schema, Atmospheric Conditions and Meteorological Geographical Features' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data-ac-mf/master/ac-mf-as">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-acmf-options-5"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexACMFAdvanced('data_consistency')"/><label class="ecl-checkbox__label" for="dataset-acmf-options-5"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'Data consistency' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data/master/data-consistency">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-acmf-options-6"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexACMFAdvanced('data_consistency_atmospheric')"/><label class="ecl-checkbox__label" for="dataset-acmf-options-6"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'Data consistency, Atmospheric Conditions and Meteorological Geographical Features' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data-ac-mf/master/ac-mf-dc">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-acmf-options-7"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexACMFAdvanced('information_accessibility')"/><label class="ecl-checkbox__label" for="dataset-acmf-options-7"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'Information accessibility' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data/master/information-accessibility">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-acmf-options-8"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexACMFAdvanced('information_accessibility_atmospheric')"/><label class="ecl-checkbox__label" for="dataset-acmf-options-8"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'Information accessibility, Atmospheric Conditions and Meteorological Geographical Features' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data-ac-mf/master/ac-mf-ia">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-acmf-options-9"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexACMFAdvanced('reference_systems')"/><label class="ecl-checkbox__label" for="dataset-acmf-options-9"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'Reference systems' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data/master/reference-systems">source</a>)</label>
+                  </div>
+                  <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="dataset-acmf-options-10"
+                      name="checkbox-default" value="inspireprofile" ng-click="selectDatasetAnnexACMFAdvanced('reference_systems_atmospheric')"/><label class="ecl-checkbox__label" for="dataset-acmf-options-10"><span
+                        class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
+                          class="ecl-checkbox__icon ecl-icon ecl-icon--s">
+                          <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
+                        </svg></span>Conformance Class 'Reference systems, Atmospheric Conditions and Meteorological Geographical Features' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/data-ac-mf/master/ac-mf-rs">source</a>)</label>
                   </div>
                 </fieldset>
 
@@ -5282,7 +5357,7 @@
     <footer class="ecl-footer-standardised">
   <div class="ecl-container ecl-footer-standardised__container">
     <section class="ecl-footer-standardised__section ecl-footer-standardised__section1"><a href=""
-        class="ecl-footer-standardised__title ecl-link ecl-link--standalone">INSPIRE Reference Validator</a> (v0.43b 2021-06-17 17:22)
+        class="ecl-footer-standardised__title ecl-link ecl-link--standalone">INSPIRE Reference Validator</a> (v0.44b 2021-07-29 16:07)
       <div class="ecl-footer-standardised__description">The INSPIRE Validator is managed by the European Commission Joint Research Centre B6 Unit</div>
     </section>
     <div class="ecl-footer-standardised__section2">
