--- a/home/index.html
+++ b/home/index.html
@@ -399,7 +399,7 @@
       <section class="ecl-footer-standardised__section">
         <div class="ecl-footer-standardised__title ecl-footer-standardised__title--separator">About us</div>
         <ul class="ecl-footer-standardised__list">
-          <li class="ecl-footer-standardised__list-item"><a href="../about/index.html"
+          <li class="ecl-footer-standardised__list-item"><a href="https://joinup.ec.europa.eu/collection/elise-european-location-interoperability-solutions-e-government/solution/inspire-reference-validator/about"
               class="ecl-footer-standardised__link ecl-link ecl-link--standalone">Information about the INSPIRE Validator</a></li>
         </ul>
       </section>
