--- a/test-selection/index.html
+++ b/test-selection/index.html
@@ -255,7 +255,7 @@
             <fieldset aria-describedby="metadata-records-1" class="ecl-form-group">
               <legend class="ecl-form-label">Select the type of metadata record(s) to be tested</legend>
                 <div class="ecl-radio"><input type="radio" id="metadata-records-1" name="metadata-records" class="ecl-radio__input"
-                    value="dataset" aria-describedby="helper-1" ng-click="selectMetadataRecords('dataset')"/><label for="metadata-records-1" class="ecl-radio__label"><span
+                  value="dataset" aria-describedby="helper-1" ng-click="selectMetadataRecords('metadata_dataset')"/><label for="metadata-records-1" class="ecl-radio__label"><span
                       class="ecl-radio__box"></span>Data sets and data set series</label>
                 </div>
                 <div class="ecl-radio"><input type="radio" id="metadata-records-2" name="metadata-records" class="ecl-radio__input"
@@ -631,7 +631,7 @@
                       <div class="ecl-help-block">Annex III</div>
                       <select id='select-annex-3' multiple size="1" ng-model="selectedOptionsAnnex3" ng-change="checkAnnexSelected()">
                         <option value="0">Agricultural and aquaculture facilities (AF)</option>
-                        <option value="1" disabled>Atmospheric conditions and Meteorological geographical features (AC-MF)</option>
+                        <option value="1">Atmospheric conditions and Meteorological geographical features (AC-MF)</option>
                         <option value="2">Area management / restriction / regulation zones & reporting units (AM)</option>
                         <option value="3">Bio-geographical regions (BR)</option>
                         <option value="4">Buildings (BU)</option>
