Enabled ER, MR, OF, SO, SU

--- a/test-selection/index.html
+++ b/test-selection/index.html
@@ -635,20 +635,20 @@
                         <option value="2">Area management / restriction / regulation zones & reporting units (AM)</option>
                         <option value="3">Bio-geographical regions (BR)</option>
                         <option value="4">Buildings (BU)</option>
-                        <option value="5" disabled>Energy Resources (ER)</option>
+                        <option value="5">Energy Resources (ER)</option>
                         <option value="6">Environmental monitoring Facilities (EF)</option>
                         <option value="7">Habitats and biotopes (HB)</option>
                         <option value="8">Human health and safety (HH)</option>
                         <option value="9">Land use (LU)</option>
-                        <option value="10" disabled>Mineral Resources (MR)</option>
+                        <option value="10">Mineral Resources (MR)</option>
                         <option value="11">Natural risk zones (NZ)</option>
-                        <option value="12" disabled>Oceanographic geographical features (OF)</option>
+                        <option value="12">Oceanographic geographical features (OF)</option>
                         <option value="13">Population distribution and demography (PD)</option>
                         <option value="14">Production and industrial facilities (PF)</option>
                         <option value="15">Sea regions (SR)</option>
-                        <option value="16" disabled>Soil (SO)</option>
+                        <option value="16">Soil (SO)</option>
                         <option value="17">Species distribution (SD)</option>
-                        <option value="18" disabled>Statistical units (SU)</option>
+                        <option value="18">Statistical units (SU)</option>
                         <option value="19">Utility and governmental services (US)</option>
                       </select>
                     </td>
