Add metadata_dataset for advanced options on Metadata

--- a/test-selection/index.html
+++ b/test-selection/index.html
@@ -301,7 +301,7 @@
                   </div>
                 </fieldset>
                 <!-- 2.0 & dataset -->
-                <fieldset aria-describedby="checkbox-default-helper" class="ecl-form-group" ng-show="select.metadataVersion == '2.0' && select.metadataRecords == 'dataset'">
+                <fieldset aria-describedby="checkbox-default-helper" class="ecl-form-group" ng-show="select.metadataVersion == '2.0' && select.metadataRecords == 'metadata_dataset'">
                   <legend class="ecl-form-label"><br/>Select the conformance classes to be assessed</legend>
                   <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="metadata-20-dataset-options-1"
                       name="checkbox-default" value="commonrequirementsds" ng-click="selectMetadataAdvancedCommonRequirementsDataset()"/><label class="ecl-checkbox__label" for="metadata-20-dataset-options-1"><span
