Update 'https://github.com/inspire-eu-validation/community' links

--- a/test-selection/index.html
+++ b/test-selection/index.html
@@ -340,14 +340,14 @@
                         class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
                           class="ecl-checkbox__icon ecl-icon ecl-icon--s">
                           <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
-                        </svg></span>Common Requirements for ISO/TC 19139:2007 based INSPIRE metadata records (<a target="_linkTest" href="https://github.com/inspire-eu-validation/metadata/tree/2.0/common">source</a>)</label>
+                        </svg></span>Common Requirements for ISO/TC 19139:2007 based INSPIRE metadata records (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/metadata/2.0/common">source</a>)</label>
                   </div>
                   <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="metadata-20-networkservice-options-2"
                       name="checkbox-default" value="conformanceclass3ns" ng-click="selectMetadataAdvancedConformanceClass3ns()"/><label class="ecl-checkbox__label" for="metadata-20-networkservice-options-2"><span
                         class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
                           class="ecl-checkbox__icon ecl-icon ecl-icon--s">
                           <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
-                        </svg></span>Conformance Class 3: 'INSPIRE Spatial Data Service baseline metadata' (<a target="_linkTest" href="https://github.com/inspire-eu-validation/metadata/tree/2.0/sds">source</a>)</label>
+                        </svg></span>Conformance Class 3: 'INSPIRE Spatial Data Service baseline metadata' (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/metadata/2.0/sds">source</a>)</label>
                   </div>
                   <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="metadata-20-networkservice-options-3"
                       name="checkbox-default" value="conformanceclass4ns" ng-click="selectMetadataAdvancedConformanceClass4ns()"/><label class="ecl-checkbox__label" for="metadata-20-networkservice-options-3"><span
@@ -365,7 +365,7 @@
                         class="ecl-checkbox__box"><svg focusable="false" aria-hidden="true"
                           class="ecl-checkbox__icon ecl-icon ecl-icon--s">
                           <use xlink:href="../component-library/dist/sprites/icons.svg#ui--check"></use>
-                        </svg></span>Common Requirements for ISO/TC 19139:2007 based INSPIRE metadata records (<a target="_linkTest" href="https://github.com/inspire-eu-validation/metadata/tree/2.0/common">source</a>)</label>
+                        </svg></span>Common Requirements for ISO/TC 19139:2007 based INSPIRE metadata records (<a target="_linkTest" href="http://inspire.ec.europa.eu/id/ats/metadata/2.0/common">source</a>)</label>
                   </div>
                   <div class="ecl-checkbox"><input type="checkbox" class="ecl-checkbox__input" id="metadata-20-spatialdataservice-options-2"
                       name="checkbox-default" value="conformanceclass3sds" ng-click="selectMetadataAdvancedConformanceClass3sds()"/><label class="ecl-checkbox__label" for="metadata-20-spatialdataservice-options-2"><span
@@ -5364,7 +5364,7 @@
       <section class="ecl-footer-standardised__section">
         <div class="ecl-footer-standardised__title ecl-footer-standardised__title--separator">Contact us</div>
         <ul class="ecl-footer-standardised__list">
-          <li class="ecl-footer-standardised__list-item"><a href="https://github.com/inspire-eu-validation/community/wiki/Your-feedback"
+          <li class="ecl-footer-standardised__list-item"><a href="https://github.com/INSPIRE-MIF/helpdesk-validator/wiki/Your-feedback"
               class="ecl-footer-standardised__link ecl-link ecl-link--standalone">Contact information</a></li>
         </ul>
       </section>
